Add responsive, fix compact search view, improve syntax

--- a/index.html
+++ b/index.html
@@ -3,12 +3,38 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="The simplest way to use icons in SolidJS"
+    />
     <meta name="theme-color" content="#FFF" />
     <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.png" />
-    <title>Solid Icons | The simplest way to use icons in SolidJS</title>
+    <title>Solid Icons | SolidJS SVG Icons</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      <div
+        style="
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          height: 100vh;
+          overflow: hidden;
+          font-size: 20px;
+        "
+      >
+        <img
+          src="https://res.cloudinary.com/zsabo/image/upload/v1631155699/39_javascript.4ce34e7594_obyyid.jpg"
+          alt="JavaScript inactive"
+          style="border-radius: 25px; width: 120px"
+        />
+        <p style="width: 400px; text-align: center">
+          This page needs JavaScript to have Interactivity and to offer its full
+          potential, activate JavaScript to continue.
+        </p>
+      </div>
+    </noscript>
     <div id="root"></div>
 
     <script src="/src/index.jsx" type="module"></script>
