--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <title>Solid Icons</title>
+    <script
+      data-host="https://microanalytics.io"
+      data-dnt="false"
+      src="https://microanalytics.io/js/script.js"
+      id="ZwSg9rf6GA"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
