--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <title>Solid Icons</title>
-    <script
-      data-host="https://microanalytics.io"
-      data-dnt="false"
-      src="https://microanalytics.io/js/script.js"
-      id="ZwSg9rf6GA"
-      async
-      defer
-    ></script>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-P66LBRK');</script>
+    <!-- End Google Tag Manager -->
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P66LBRK"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
